--- a/index_.html
+++ b/index_.html
@@ -106,7 +106,7 @@
         <h5> Practicas Parcial 2</h5>
         <ol>
             <li>
-                <a href="formularios.html">
+                <a href="Formularios.html">
                     Practica 1
                 </a>
                 
