--- a/index_.html
+++ b/index_.html
@@ -152,6 +152,15 @@
         </ol>
     </nav>
 
+<script type="text/javascript">
+ var vsid = "si253338bf9895c";
+ (function() { 
+ var vsjs = document.createElement('script'); vsjs.type = 'text/javascript'; vsjs.async = true; vsjs.setAttribute('defer', 'defer');
+  vsjs.src = 'https://www.virtualspirits.com/vsa/chat.js';
+   var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(vsjs, s);
+ })();
+</script>
+
 
 
 
