--- a/index_.html
+++ b/index_.html
@@ -149,6 +149,9 @@
             <li>
                 <a href="Avance2.html">Avance 2</a>
             </li>
+            <li>
+                <a href="Avance3.html">Avance 3</a>
+            </li>
         </ol>
     </nav>
 
