--- a/index_.html
+++ b/index_.html
@@ -154,7 +154,7 @@
         <h5>Proyecto Final</h5>
         <ol>
             <li>
-                <a href="Avance1.pdf">Avance 1</a>
+                <a href="Proyecto final/Avance1.pdf">Avance 1</a>
             </li>
             <li>
                 <a href="Avance2.html">Avance 2</a>
