--- a/index_.html
+++ b/index_.html
@@ -162,6 +162,9 @@
             <li>
                 <a href="Avance3.html">Avance 3</a>
             </li>
+            <li>
+                <a href="Avance3.html">Avance 3</a>
+            </li>
         </ol>
     </nav>
 
