--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <p align="center">Evaluar el desempeño del sistema de información de acuerdo a las métricas establecidas para verificar su correcta operación.</p>
 
       
-
+<h2>Temas</h2>
         <ol type="i">
             <li>Introducción a las aplicaciones WEB</li>
             <li>Bases de datoso</li>
@@ -66,8 +66,8 @@
             <li>Elementos Avanzados de Programacion</li>
             <li>Seguridad en Aplicaciones Web</li>
         </ol>
+    <h2>Indice</h2>
         <ul>
-            <li>Indice</li>
             <li>Parcial 1</li>
             <li>Parcial 2</li>
             <li>Parcial 3</li>
